# mission-control-poc

./: .env.example  .gitignore  AGENTS.md  Dockerfile.worker  README.md  architecture.md  docker-compose.yml  implementation-plan.md  prefect.yaml  pyproject.toml
docker/postgres/init/: 00-init-databases.sh
docs/: local-development.md  metabase-dashboard-playbook.md  metabase-setup.md
flows/: __init__.py  build_analytics.py  ingest_raw.py  soc_metrics_pipeline.py
sql/analytics/: 001_reset_analytics_tables.sql  002_stg_cases.sql  003_stg_alerts.sql  004_stg_runs.sql  005_stg_systems.sql  006_stg_case_alert_links.sql  010_case_metrics.sql  020_alert_metrics.sql  030_automation_metrics.sql  040_soc_daily_summary.sql  050_kpi_monthly.sql  060_alert_volume_by_source_monthly.sql  070_alert_reviews_by_shift.sql
sql/raw/: 001_create_raw_tables.sql
src/: metabase_bootstrap.py
src/db/: __init__.py  connection.py  sql.py
src/mock_sources/: __init__.py  _common.py  customer_systems.py  dfir_iris.py  shuffle.py  siem.py
