[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soc-metrics-pipeline"
version = "0.1.0"
description = "Local proof-of-concept scaffold for an SOC metrics pipeline."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "prefect",
    "psycopg[binary]",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.hatch.build]
dev-mode-dirs = [".", "src"]

[tool.hatch.build.targets.wheel]
packages = ["flows", "src/db", "src/mock_sources"]
sources = ["src"]

[tool.ruff]
target-version = "py312"
include = ["flows/*.py", "src/**/*.py"]
